# qbittorrent-clipboard-monitor

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REFACTOR_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_STRUCTURE_ANALYSIS.md  CONTRIBUTING.md  DOCKER_OPTIMIZATION.md  Dockerfile  FINAL_OPTIMIZATION_REPORT.md  FIXES.md  LICENSE  METRICS.md  MIGRATION_GUIDE_v3_to_v3_1.md  MINIMAX_SETUP.md  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PHASE_1_5_IMPLEMENTATION_REPORT.md  QBITTORRENT_API.md  QB_API_VERIFICATION.md  QUICKSTART.md  README.md  RUFLO_INTEGRATION.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_AUDIT_REPORT.md  SECURITY_HARDENING_REPORT.md  SECURITY_QUICK_START.md  STARTUP_GUIDE.md  SWARM_OPTIMIZATION_REPORT.md  (+22 more)
.bmad-core/: install-manifest.yaml
.claude/: index.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  security-audit.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/tasks/: store.json
.cursor/rules/: deepseek_api_guide.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: exceptions_analysis.md  log_optimizer_analysis.md  performance_monitor_analysis.md  project_scan_completion_report.md  startup_module_analysis.md
.swarm/: state.json
.swarm/ux-optimization/: IMPLEMENTATION_SUMMARY.md  UX_OPTIMIZATION_REPORT.md  swarm-config.yaml
.trae/rules/: project_rules.md
docs/: API.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENT.md  CODE_QUALITY_IMPROVEMENTS.md  CODING_STANDARDS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FILE_SPLITTING_PLAN.md  OPTIMIZATION_CHANGELOG.md  QUALITY_IMPROVEMENT_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  api.md  architecture.md  deployment.md  development.md  exception_architecture_plan.md  logging.md  project_optimization_guide.md
docs/api/: config.md  index.md  performance.md  websocket.md
docs/architecture/: qBittorrent 剪贴板监控与自动分类下载器项目分析报告.md  提示词.md  项目模块优化改进建议.md
docs/config/: CONFIGURATION_REFERENCE.md  CONFIG_DOCUMENTATION_PLAN.md  ENVIRONMENT_VARIABLES.md  OUTPUT_SUMMARY.md  README.md
docs/guides/: CHANGELOG.md  INSTALL.md  README.md
examples/: performance_demo.py
libs/: alphashape-1.3.1-py2.py3-none-any.whl  crawl4ai-0.6.3-py3-none-any.whl  crawl4ai-0.7.3-py3-none-any.whl  crawl4ai-0.7.6-py3-none-any.whl  fake_http_header-0.3.5-py3-none-any.whl  greenlet-3.2.3-cp313-cp313-macosx_11_0_universal2.whl  jiter-0.9.0-cp313-cp313-macosx_11_0_arm64.whl  jiter-0.9.0-cp313-cp313-win_amd64.whl  psutil-7.1.2-cp36-abi3-macosx_11_0_arm64.whl  rpds_py-0.27.0-cp313-cp313-macosx_11_0_arm64.whl  rpds_py-0.28.0-cp313-cp313-macosx_11_0_arm64.whl  shapely-2.1.1-cp313-cp313-macosx_11_0_arm64.whl  tf_playwright_stealth-1.2.0-py3-none-any.whl  tiktoken-0.11.0-cp313-cp313-macosx_11_0_arm64.whl  trimesh-4.7.4-py3-none-any.whl  trimesh-4.9.0-py3-none-any.whl
log/: README.md  architecture_and_flowchart.md  install_dependencies.bat  requirements.txt
monitoring_dashboard/: app.py
monitoring_dashboard/templates/: dashboard.html
qbittorrent_monitor/: CLAUDE.md  __init__.py  __main__.py  __version__.py  ai_classifier.py  api_compliant_client.py  api_compliant_main.py  async_clipboard.py  circuit_breaker.py  classifier.py  cli_ui.py  clipboard_actions.py  clipboard_models.py  clipboard_monitor.py  clipboard_monitor_enhanced.py  clipboard_poller.py  clipboard_processor.py  concurrency.py  config.json  config.json.example  config.py  config_enhanced.py  config_validator.py  constants.py  database.py  enhanced_cache.py  exception_handler.py  exceptions.py  exceptions_enhanced.py  exceptions_unified.py  fallback.py  graceful_shutdown.py  health_check.py  intelligent_filter.py  interfaces.py  lazy_loader.py  local_processor.py  log_optimizer.py  logger.py  logging_config.py  (+36 more)
qbittorrent_monitor/ai/: __init__.py
qbittorrent_monitor/clipboard_monitor/: __init__.py  activity_tracker.py  base.py  batch_processor.py  core.py  optimized.py
qbittorrent_monitor/common/: __init__.py  decorators.py  exceptions.py  validators.py
qbittorrent_monitor/config/: __init__.py  ai.py  base.py  categories.py  constants.py  database.py  env_loader.py  manager.py  metrics.py  plugins.py  qb.py  validators.py  wizard.py
qbittorrent_monitor/constants/: __init__.py  defaults.py  limits.py  patterns.py
qbittorrent_monitor/container/: __init__.py  bootstrap.py  container.py
qbittorrent_monitor/core/: __init__.py  debounce.py  magnet.py  pacing.py
qbittorrent_monitor/crawler/: __init__.py  crawler_stats.py  resource_pool.py  torrent_info.py
qbittorrent_monitor/interfaces/: __init__.py  classifier.py  database.py  metrics.py  torrent_client.py
qbittorrent_monitor/monitor/: __init__.py
qbittorrent_monitor/performance/: README.md  __init__.py  asyncio_optimizer.py  batch_writer.py  connection_pool.py  integrations.py  trie_classifier.py  ttl_cache.py
qbittorrent_monitor/plugins/: __init__.py  base.py  hooks.py  manager.py
qbittorrent_monitor/qbittorrent_client/: __init__.py  base.py  core.py  (+4 more)
scripts/: CLAUDE.md  analyze_duplicates.py  analyze_test_coverage.py  check_coverage.sh  check_version_consistency.py  cleanup_dependency_files.py  code_quality_check.py  environment_manager.py  format.sh  generate_coverage_report.py  install_hooks.sh  lint.sh  pre-commit-check.sh  run_tests.sh  security_scan.py  setup_dev.sh  validate_poetry.py  verify_poetry.py
src/: start.py
tests/: CLAUDE.md  TEST_SUMMARY.md  conftest.py  pytest.ini  test_classifier.py  test_config.py  test_database.py  test_logger.py  test_performance.py  test_performance_optimization.py  test_plugins.py  test_security.py  test_security_enhanced.py  test_utils.py
优化文档/: qbittorrent-clipboard-monitor 优化计划.md
(+106 files in other folders)
