[tool.poetry]
name = "qbittorrent-clipboard-monitor"
version = "2.5.0"
description = "磁力链接监控与自动分类下载工具"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "qbittorrent_monitor"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.11.18"
pydantic = "^2.11.0"
pyperclip = "^1.9.0"
openai = "^1.76.0"
tenacity = "^9.0.0"
watchdog = "^6.0.0"
dynaconf = "^3.2.0"
click = "^8.1.0"
apprise = "^1.9.0"
beautifulsoup4 = "^4.12.3"
colorama = "^0.4.6"
crawl4ai = "^0.6.3"
retrying = "^1.3.0"
psutil = "^5.9.0"
aiohttp-cors = "^0.7.0"
# 安全依赖
passlib = {version = "^1.7.4", optional = true}
structlog = {version = "^24.2.0", optional = true}
sentry-sdk = {version = "^2.18.0", optional = true}
prometheus-client = {version = "^0.16.0", optional = true}
fastapi = {version = "^0.115.0", optional = true}
uvicorn = {version = "^0.35.0", optional = true}

[tool.poetry.extras]
webui = ["fastapi", "uvicorn"]
security = ["passlib", "structlog", "sentry-sdk"]
monitoring = ["prometheus-client"]
all = ["fastapi", "uvicorn", "prometheus-client", "passlib", "structlog", "sentry-sdk"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pytest-benchmark = "^4.0.0"
black = "^24.11.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
bandit = "^1.7.6"
safety = "^3.2.11"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^2.5.0"
ipython = "^8.20.0"
jupyter = "^1.1.1"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.3"
pipdeptree = "^2.23.4"

[tool.poetry.scripts]
qbmonitor = "qbittorrent_monitor.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=qbittorrent_monitor",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85"
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["qbittorrent_monitor"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
] 