[tool.poetry]
name = "qbittorrent-clipboard-monitor"
version = "3.0.0"
description = "简洁高效的qBittorrent剪贴板监控工具"
authors = ["Kimi Claw <refactor@qb-monitor.local>"]
readme = "README.md"
packages = [{include = "qbittorrent_monitor"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.11"
openai = "^1.76"
pyperclip = "^1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
black = "^24.0"
mypy = "^1.13"

[tool.poetry.scripts]
qbmonitor = "qbittorrent_monitor.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["--cov=qbittorrent_monitor", "--cov-report=term-missing"]
