[tool.poetry]
name = "qbittorrent-clipboard-monitor"
version = "3.0.0"
description = "简洁高效的qBittorrent剪贴板监控工具"
authors = ["Kimi Claw <refactor@qb-monitor.local>"]
readme = "README.md"
packages = [{include = "qbittorrent_monitor"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.11"
anthropic = "^0.43"
pyperclip = "^1.9"
fastapi = "^0.115"
uvicorn = "^0.32"
jinja2 = "^3.1"
python-multipart = "^0.0.20"
prometheus-client = "^0.19"
aiosqlite = "^0.20"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
black = "^24.0"
mypy = "^1.13"

[tool.poetry.extras]
performance = ["xxhash", "pyahocorasick", "psutil"]
all = ["xxhash", "pyahocorasick", "psutil"]

[tool.poetry.dependencies.xxhash]
version = "^3.4.1"
optional = true

[tool.poetry.dependencies.pyahocorasick]
version = "^2.1.0"
optional = true

[tool.poetry.dependencies.psutil]
version = "^5.9.0"
optional = true

[tool.poetry.scripts]
qbmonitor = "qbittorrent_monitor.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "pyperclip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# addopts = ["--cov=qbittorrent_monitor", "--cov-report=term-missing"]
