[metadata]
name = qbittorrent-clipboard-monitor
version = 3.0.0
description = 简洁高效的qBittorrent剪贴板监控工具
long_description = file: README.md
long_description_content_type = text/markdown
author = Kimi Claw
author_email = refactor@qb-monitor.local
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests
    tests.*
    docs

# ========== isort Configuration (备用配置) ==========
[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = 
    .git
    __pycache__
    .venv
    venv
    .env
    env
    build
    dist
    .mypy_cache
    .pytest_cache
known_first_party = qbittorrent_monitor
known_third_party = 
    aiohttp
    openai
    pyperclip
    fastapi
    uvicorn
    jinja2
    prometheus_client
    aiosqlite
    pytest

# ========== Coverage Configuration ==========
[coverage:run]
source = qbittorrent_monitor
branch = True
omit = 
    tests/*
    */tests/*
    test_*
    */test_*
    __pycache__/*
    */__pycache__/*
    .venv/*
    venv/*
    */.venv/*
    */venv/*
    setup.py
    run.py

[coverage:report]
show_missing = True
skip_covered = False
fail_under = 80
precision = 2
exclude_lines = 
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    pass
    \.\.\.

[coverage:html]
directory = htmlcov
title = qBittorrent Monitor Coverage Report

[coverage:xml]
output = coverage.xml

# ========== pytest Configuration ==========
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
markers = 
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
filterwarnings = 
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

# ========== pydocstyle Configuration ==========
[pydocstyle]
convention = google
add-select = 
    D203
    D204
    D213
add-ignore = 
    D100
    D104
    D107
    D203
    D212
    D415
match = .*\.py
match-dir = [^\.].*

# ========== flake8 Configuration (备用) ==========
[flake8]
max-line-length = 100
max-complexity = 10
extend-ignore = E203, W503
exclude = 
    .git
    __pycache__
    .venv
    venv
    .env
    env
    build
    dist
    .mypy_cache
    .pytest_cache
    .eggs
    *.egg
    *.egg-info
